// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configures package.json content: creates managed scripts and the development dependency 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures package.json content: discards invalid managed entries while preserving valid entries 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures package.json content: overwrites conflicts while preserving unrelated fields dependencies and scripts 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures package.json content: preserves and reconciles every dependency section 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures package.json content: replaces non-object script and dependency containers 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`creates the custom install-packages compatibility scripts when selected 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Standard npm install
│  ● Custom npm script (npm run install-packages — supports npm 11 and earlier)
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Custom npm script
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`switches from custom install scripts to standard npm install without stale hooks 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`switches to custom install scripts and restores chained preinstall work 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Standard npm install
│  ● Custom npm script (npm run install-packages — supports npm 11 and earlier)
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Custom npm script
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;
